k8s/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trace-collector
  namespace: trace
  labels:
    app: trace-collector
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: trace-collector
